# Neuron

./: .ai-knowledge-base.json  .gitignore  .pre-commit-config.yaml  AGENT_ASSIGNMENT_PLAN.md  AGENT_COORDINATION_VISIBILITY.md  AGENT_INTEGRATION_CONFIRMATION.md  ALL_SETUP_COMPLETE.md  AUTH_BUG_FIXED.md  AUTONOMOUS_24_7_OPERATION.md  AUTONOMOUS_OPERATION_COMPLETE.md  BACKEND_SETUP_COMPLETE.md  BATCH_AUTONOMOUS_WORKFLOW.md  BRANCH_PROTECTION_QUICK_SETUP.md  CHANGELOG.md  COMPREHENSIVE_AGENT_SETUP_REVIEW.md  COMPREHENSIVE_TEST_REPORT.md  COST_OPTIMIZED_TESTING_WORKFLOW.md  CTO_AGENT_READY.md  CTO_LOGGING_GUIDE.md  DAILY_RESUME_QUICK_REFERENCE.md  DATE_CORRECTION_SUMMARY.md  DEVELOPMENT_READINESS_REPORT.md  ERROR_HANDLING_AND_RECOVERY.md  FAANG_DEVOPS_CI_CD_REVIEW.md  FAANG_DEVOPS_IMPLEMENTATION_COMPLETE.md  FAANG_LEVEL_READINESS_REVIEW.md  FAANG_STYLE_DEVELOPMENT_GUIDE.md  FINAL_SETUP_STATUS.md  FINAL_STATUS_REPORT.md  HOW_TO_SEE_AGENT_COORDINATION.md  HOW_TO_USE_CTO_AGENT.md  Highlevel specs.md  KNOWLEDGE_BASE_MANAGEMENT.md  LAUNCH_GUIDE.md  MASTER_PROMPT_PRODUCT_MANAGER_CTO.md  MASTER_PROMPT_TEMPLATE.md  MINIMAL_INTERACTION_WORKFLOW.md  Makefile  NEXT_STEPS_COMPLETED.md  NOTION_PAGES_CREATED.md  (+45 more)
backend/: .env.example  DEV_GOVERNANCE.md  Dockerfile  FAANG_SETUP_COMPLETE.md  FAANG_SETUP_VERIFICATION.md  MIGRATION_GUIDE.md  Makefile  README.md  TEST_SUITE_SUMMARY.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start_backend.sh  test_phase1_validation.py  test_phase1_validation_final.py  test_phase1_validation_v2.py
backend/alembic/: env.py
backend/alembic/versions/: 20251209_case_history.py  20251209_m41_case_lifecycle.py  20251209_m42_pricing_case_types.py  20251209_m43_security_guardrails.py  20251210_m45_billing_plan_state.py  20251210_m8_agentic_platform.py  20251211_m8_4_client_engagement_settings.py  add_case_tasks.py  add_performance_indexes.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  cases.py  config.py  organizations.py  persons.py  users.py
backend/app/db/: database.py
backend/app/models/: __init__.py  case.py  config.py  db_utils.py  organization.py  person.py  user.py
backend/app/schemas/: __init__.py  auth.py  case.py  config.py  organization.py  person.py  user.py
backend/app/services/: __init__.py  auth.py  case.py  config.py  organization.py  person.py  user.py
backend/legacy/: README.md
backend/legacy/app/: main.py
backend/legacy/app/api/: dependencies.py
backend/legacy/app/middleware/: __init__.py  security.py
backend/legacy/app/models/: config.py  organization.py  person.py  task.py  user.py
backend/legacy/app/schemas/: auth.py  case.py  document.py  user.py
backend/legacy/app/services/: __init__.py  auth.py  case.py  config.py  document.py  ocr.py  person.py  task.py
backend/legacy/tests/: test_models_simple.py  test_services.py
backend/scripts/: seed_testsprite_user.py  update_imports.py
backend/src/app/: config.py  main.py
backend/src/app/admin_config/: service.py
backend/src/app/agents/: __init__.py  client_engagement_agent.py  (+1 more)
backend/tests/: conftest.py  test_models_simple.py  test_observability.py  test_services.py
backend/tests/billing/: __init__.py  test_billing.py
backend/tests/config/: test_form_config.py  test_intake_config.py  test_intake_config_overrides.py
backend/tests/contracts/: test_api_contracts_phase13.py
backend/tests/e2e/: __init__.py  conftest.py  test_example.py
backend/tests/integration/: __init__.py  test_cases.py  test_documents.py  test_example_integration.py  test_persons.py  test_smoke_basic.py  test_tasks.py
backend/tests/rule_engine/: test_crs_engine.py
backend/tests/security/: test_guardrails.py
backend/tests/services/: test_agent_orchestrator.py  test_assisted_drafts.py  test_client_engagement_agent.py  test_client_engagement_auto_runner.py  test_client_engagement_settings_service.py  test_document_heuristics_engine.py  test_document_reviewer_agent.py  test_form_autofill_engine.py  test_intake_engine.py  test_llm_client.py  test_profile_mapping.py  test_submission_prep_engine.py  test_submission_preparation.py  test_submission_readiness_engine.py  test_submission_readiness_evidence.py  test_submission_readiness_service.py
backend/tests/unit/: __init__.py  test_auth.py  test_auth_endpoints.py  test_config.py  test_example_service.py  test_healthcheck.py  test_models_simple.py  test_services.py  test_utils_helpers.py
(+439 files in other folders)
